--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -99,9 +99,9 @@
             </ul>
           </li> -->
           <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="admin/category">
               <i class="fa fa-fw fa-link"></i>
-              <span class="nav-link-text">Link</span>
+              <span class="nav-link-text">Categories</span>
             </a>
           </li>
         </ul>
@@ -212,26 +212,6 @@
 
   <!--CONTENT WRAPPER-->
   <div class="content-wrapper">
-
-    <!--FLASH MESSAGES-->
-    <% if (success_message) { %>
-    <div class="alert alert-success alert-dismissible fade show mt-2" role="alert">
-        <strong> <%= success_message %> </strong>
-
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"></button>
-        <span aria-hidden="true">&times;</span>
-    </div>
-    <% } %>
-    
-
-    <% if (error_message) { %>
-    <div class="alert alert-danger alert-dismissible fade show mt-2" role="alert">
-        <strong> <%= error_message %> </strong>
-
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"></button>
-        <span aria-hidden="true">&times;</span>
-    </div>
-    <% } %>
 
     <div class="container-fluid">
       <div class="container">
