--- a/views/admin/posts/edit.ejs
+++ b/views/admin/posts/edit.ejs
@@ -142,9 +142,9 @@
             data-placement="right"
             title="Link"
           >
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="admin/category">
               <i class="fa fa-fw fa-link"></i>
-              <span class="nav-link-text">Link</span>
+              <span class="nav-link-text">Categories</span>
             </a>
           </li>
         </ul>
@@ -280,6 +280,15 @@
                     <option value="public">Public</option>
                     <option value="private">Private</option>
                     <option value="draft">Draft</option>
+                  </select>
+                </div>
+
+                <div class="form-group">
+                  <label for="category">Category</label>
+                  <select name="category" id="category" class="form-control">
+                    <% categories.forEach(cat => { %>
+                      <option value="<%= cat._id %>"> <%= cat.title %> </option>
+                    <% }); %>
                   </select>
                 </div>
 
